crates/formatter/tests/snapshots/snapshots__anki__storage__card__active_new_cards.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select id, nid, ord, cast (mod as integer), did, odid
from cards
where did in (select id from active_decks) and queue = 0;
