crates/formatter/tests/snapshots/snapshots__anki__storage__card__add_card.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into cards (
	id,
	nid,
	did,
	ord,
	mod,
	usn,
	type,
	queue,
	due,
	ivl,
	factor,
	reps,
	lapses,
	left,
	odue,
	odid,
	flags,
	data
)
values
	(
		(
			case
				when ?1 in (select id from cards) then (select max(id) + 1 from cards)
				else ?1
			end
		),
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?
	);
