crates/formatter/tests/snapshots/snapshots__anki__storage__card__add_or_update.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert or replace into cards (
	id,
	nid,
	did,
	ord,
	mod,
	usn,
	type,
	queue,
	due,
	ivl,
	factor,
	reps,
	lapses,
	left,
	odue,
	odid,
	flags,
	data
)
values (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
