crates/formatter/tests/snapshots/snapshots__anki__storage__card__at_or_above_position.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into search_cids select id from cards where due >= ? and type = ?
