crates/formatter/tests/snapshots/snapshots__anki__storage__card__due_cards.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select
	id, nid, due, cast (ivl as integer), cast (mod as integer), did, odid, reps
from cards
where did in (select id from active_decks) and (queue = ? and due <= ?)
