crates/formatter/tests/snapshots/snapshots__anki__storage__card__fix_ivl.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update cards
set ivl = min(max(round(ivl), 0), 2147483647), mod = ?1, usn = ?2
where ivl != min(max(round(ivl), 0), 2147483647);
