crates/formatter/tests/snapshots/snapshots__anki__storage__card__fix_low_ease.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update cards
set factor = 2500, usn = ?
where factor != 0 and factor <= 2000 and (did in DECK_IDS or odid in DECK_IDS);
